2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Fixed the allocator for gbz80.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp,
	  src/z80/tree_dec.hh,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Moved some generic parts of the new allocator out of the z80 directory.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Type fixes.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Preparations for the use of a better cost function and handling a, hl and iy in the new allocator.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.h,
	  src/z80/ralloc.c,
	  src/z80/ralloc2.cc:
	  Improved variable handling and C++ standard conformance.

2011-01-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Removed local assignment map.

2011-01-16 Philipp Klaus Krause <pkk AT spth.de>

	* configure.in,
	  configure,
	  Makefile.common.in,
	  src/Makefile.in,
	  src/port.mk,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/z80/z80.h,
	  src/z80/main.c,
	  src/z80/ralloc.h,
	  src/z80/ralloc.c,
	  src/z80/tree_dec.hh,
	  src/z80/ralloc2.cc:
	  Initial import of the new register allocator.

2011-01-16 Philipp Klaus Krause <pkk AT spth.de>

	* SDCClrange.h,
	  SDCClrange.c:
	  Comment on the effects of dead code on live ranges.

2011-01-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c:
	  Make argument to validateOpType const.

2011-01-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Two new peephole rules, optimizing code frequently generated by the new allocator.

2011-01-16 Borut Razem <borut.razem AT siol.net>

	* support/regression/collate-results.py: count invalid instructions