@@ -1,5 +1,10 @@
 2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/z80/ralloc2.cc:
+	  Fixed some forgotten debug statements.
+
+2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/SDCCralloc.hpp,
 	  src/z80/ralloc2.cc:
 	  Fixed the allocator for gbz80.
